@@ -266,7 +266,6 @@ public class CompleteTest extends JArmEmuTest {
         assertEqualsMemory("/complete/helloworldAscii-memory.d");
     }
 
-    // TODO: ne pas faire passer les tests qui lancent des autobreaking points
     @Test
     public void pgcdDriveTest() {
         load("/complete/pgcdDrive.s");
